--- a/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -31,10 +31,11 @@
                 @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
+                    <button data-id="@item.Id" class="btn btn-primary allocateBtn" type="button">Allocate Leave</button>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit <i class="fas fa-pencil-alt"></i></a>
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details <i class="fas fa-info-circle"></i></a>
-                @*@<a asp-action="Delete" class="btn btn-danger deleteBtn"asp-route-id="@item.Id">Delete</a>*@
-                    <button data-id="@item.Id" class="btn btn-danger deleteBtn">Delete <i class="far fa-trash-alt"></i></button>
+                    @*<a asp-action="Delete" class="btn btn-danger deleteBtn"asp-route-id="@item.Id">Delete</a>*@
+                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete <i class="far fa-trash-alt"></i></button>
             </td>
         </tr>
 }
@@ -45,11 +46,13 @@
     <input type="hidden" id="leaveTypeId" name="Id" />
 </form>
 
+<form id="allocateForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeIdAllocate" name="Id" />
+</form>
+
 @section Scripts{
     <script>
         $(function(){
-
-            $('.table').DataTable();
 
             $(".deleteBtn").click(function(e){
                 swal({
@@ -66,6 +69,23 @@
                             $("#deleteForm").submit();
                         }
                     });
+            });
+
+            $(".allocateBtn").click(function (e) {
+                swal({
+                    title: "Are you sure",
+                    text: "Are you sure you want to allocate this leave to all employees?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $("#leaveTypeIdAllocate").val(id);
+                        $("#allocateForm").submit();
+                    }
+                });
             });
         });
     </script>
