Improved User Interface.

--- a/LeaveManagement.Web/Views/LeaveRequests/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveRequests/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdminLeaveRequestViewVM
 
 @{
-	ViewData["Title"] = "Index";
+	ViewData["Title"] = "Leave Requests";
 }
 
 <h1>Admin Leave Requests View</h1>
