--- a/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
+++ b/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
@@ -44,7 +44,7 @@
             </div>
             <br />
             <div class="form-group">
-                <a asp-action="Index" class="btn btn-dark">Back to my Leave</a>
+                <a asp-action="MyLeave" class="btn btn-dark">Cancel</a>
                 <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
