--- a/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<LeaveTypeVM>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Leave Types";
 }
 
-<h1>Index</h1>
+<h1>Leave Types</h1>
 
 <p>
     <a class="btn btn-success" asp-action="Create">Create New <i class="fas fa-plus"></i></a>
