Added the Accounts Credentials Info Page.

--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Employees" asp-action="Index">Employees <i class="fa-solid fa-users"></i> </a>
                             </li>
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Leave Management
                             </a>
                             <ul class="dropdown-menu">
@@ -65,7 +65,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; @DateTime.Now.Year - Leave Management Web App - Badr Saidi - ASP.NET - 
-            <a asp-area="" asp-controller="Home" asp-action="Technologies">Used Technologies</a>
+            <a asp-area="" asp-controller="Home" asp-action="AccountsCredentials">Accounts Credentials</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
